--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,6 @@
 
 </head>
 <body>
-
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
-
+  <uk-badge>BADGE</uk-badge>
 </body>
 </html>
